--- a/estilos.css
+++ b/estilos.css
@@ -3,6 +3,11 @@
       font-size: 35px;  
       font-family: monospace;
 }
+.title-border {
+      border-color: sandybrown;
+      border-style: solid;
+      border-width: 10px;
+}
 
 .sub-title {
       color: slateblue;
@@ -17,4 +22,9 @@
 
 .medium-image {
       width: 300px;
+      border-color: slategray;
+      border-style: solid;
+      border-width: 5px;
+      border-radius: 1%;
+   
 }
