--- a/estilos.css
+++ b/estilos.css
@@ -88,3 +88,35 @@ body {
 #foto-diego:hover {
   transform: scale(1.1)
 }
+.heart {
+      position: absolute;
+      margin: left;
+      top: 150px;
+      right: 0;
+      bottom: 0;
+      left: 1100px;
+      background-color: pink;
+      height: 50px;
+      width: 50px;
+      transform: rotate(-45deg);
+    }
+    .heart::after {
+      background-color: pink;
+      content: "";
+      border-radius: 50%;
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      top: 0px;
+      left: 25px;
+    }
+    .heart::before {
+      content: "";
+      background-color: pink;
+      border-radius: 50%;
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      top: -25px;
+      left: 0px;
+    }
