--- a/estilos.css
+++ b/estilos.css
@@ -123,3 +123,25 @@ body {
     .heart:hover {
           transform: scale(1.2);
     }
+    
+    #rect {
+      height: 40px;
+      width: 70%;
+      background: black;
+      margin: 50px auto;
+      border-radius: 5px;
+    }
+  
+    #rect:hover {
+  animation-name: rainbow;
+  animation-duration: 4s;
+  
+    }
+  
+  @keyframes rainbow {
+  0%{background-color: blue;}
+  50% {background-color: green;}
+  100% {background-color: yellow;}
+  }
+  
+  
