Se agrego la propiedad animation fill mode configurado en forwards, lo que permite que la animacion rainbow se mantenga con la forma y color de la ultima parte de su animacion hasta que se quite el mouse de este objeto, regresando a su forma original

--- a/estilos.css
+++ b/estilos.css
@@ -134,8 +134,8 @@ body {
   
     #rect:hover {
   animation-name: rainbow;
-  animation-duration: 4s;
-  
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
     }
   
   @keyframes rainbow {
