Se corrigio error en la visualizacion de la barra con los datos de contacto, ahora al reajustar el anchon de la pantalla se mantiene en su lugar, para lograrlo cambiamos a margin top 90px y padding top a auto

--- a/estilos.css
+++ b/estilos.css
@@ -10,8 +10,9 @@ body {
       background-color: rgba(48, 49, 51, 0.664);
       color: rgb(212, 218, 240);
       position: fixed;
-      margin-top: -7%;
+      margin-top: -90px;
       inline-size: 99%;
+      padding-top: auto;
 }
 
 ul.datos-contacto li {
