Se agrego animacion de objeto redondo con fondo gradiente que se desplaza al poner el mouse

--- a/estilos.css
+++ b/estilos.css
@@ -157,5 +157,32 @@ ul.datos-contacto li {
       top: 0px;
 }
   }
+
+  #ball {
+      width: 70px;
+      height: 70px;
+      margin: 50px auto;
+      position: relative;
+      left: 20%;
+      border-radius: 50%;
+      background: linear-gradient(
+        35deg,
+        #ccffff,
+        #ffcccc
+      );
+    }
+    #ball:hover {
+      animation-name: fade;
+      animation-duration: 3s;
+      animation-fill-mode: forwards;
+    }
+  
+    @keyframes fade {
+      50% {
+        left: 60%;
+        opacity: 0.1;
+  
+      }
+    }
   
   
