--- a/estilos.css
+++ b/estilos.css
@@ -7,8 +7,14 @@
 
 body {
 
-      color: rgb(48, 42, 22);
+  color: rgb(48, 42, 22);
 }
+
+.container {
+  margin: 1.45rem 8% 0 8%;
+}
+
+
 .gray-bar {
       background-color: rgba(48, 49, 51, 0.664);
       color: rgb(212, 218, 240);
