--- a/estilos.css
+++ b/estilos.css
@@ -15,7 +15,7 @@ body {
 }
 
 
-.gray-bar {
+.contact-bar {
       background-color: rgba(48, 49, 51, 0.664);
       color: rgb(212, 218, 240);
       position: fixed;
