We make corretions on links into Portfolio of work, We make correctionns and ands icons into landing-page

--- a/product-landing-page/estilos.css
+++ b/product-landing-page/estilos.css
@@ -138,14 +138,11 @@ nav > ul {
    
 }
 
-h2 {
-    margin-bottom: 20px;
-    word-wrap: break-word;
-}
-#hero > h2 {
+#hero h2 {
 
     margin-bottom: 20px;
     word-wrap: break-word;
+    font-size: 35px;
 }
 
 #hero input[type="email"] {
@@ -160,7 +157,7 @@ h2 {
     height: 30px;
     margin: 15px 0;
     border: 0;
-    background-color: sandybrown;
+    background-color: #f1c40f;
 }
 
 #hero input[type="submit"]:hover {
@@ -175,11 +172,24 @@ h2 {
 }
 
 #features {
-
     margin-top: 30px;
 }
 
+#features .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 125px;
+    width: 20vw;
+    color: darkorange;
+    transform: scale(0.5);
+}
 
+@media (max-width: 550px) {
+    #features .icon {
+        display: none;
+    }
+}
 
 #features .desc {
     display: flex;
@@ -188,4 +198,104 @@ h2 {
     height: 125px;
     width: 80VW;
     padding: 5px;
+}
+@media (max-width: 550px) {
+    #features .desc {
+        width: 100%;
+        text-align: center;
+        padding: 0;
+        height: 150px;
+    }
+}
+@media (max-width: 650px) {
+    #features {
+        margin-top: 0;
+    }
+}
+
+#how-it-works {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+#how-it-works > iframe {
+    max-width: 560px;
+    width: 100%;
+}
+
+#pricing {
+    margin-top: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: calc (100% / 3);
+    margin: 10px;
+    border: 1px solid #000;
+    border-radius: 3px;
+}
+
+.product > .level {
+    background-color: #ddd;
+    color: black;
+    padding: 15px 0;
+    width: 100%;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+.product > h2{
+    margin-top: 15px;
+}
+.product > ol {
+    margin: 15px 0;
+}
+.product > ol > li {
+    padding: 5px 0;
+}
+.product > button {
+    border: 0;
+    margin: 15px 0;
+    background-color: #f1c40f;
+    font-weight: 400;
+}
+
+.product > button:hover {
+    background-color: orange;
+    transition: background-color 1s;
+  }
+  @media (max-width: 800px) {
+      #pricing {
+          flex-direction: column;
+      }
+  }
+.product {
+    max-width: 300px;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+footer {
+    margin-top: 30px;
+    background-color: #ddd;
+    padding: 20px;
+}
+footer > ul {
+    display: flex;
+    justify-content: flex-end;
+}
+footer > ul > li {
+    padding: 0 10px;
+}
+footer > span {
+    margin-top: 5px;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 0.9em;
+    color: #444;
 }
