We created multiples page and their respective links, We changed the color and design of index page

--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,14 @@
 .html-properties {
       background-color: hsla(205, 24%, 80%, 0.219);
+      background-color: rgb(76, 0, 130, 0.205);
+}
+.main-page-container {
+  background-color: lavender;
+  background-color: rgb(238, 235, 235);
+  max-width: 800px;
+  width: 95%;
+  padding: 2%;
+  margin: 0 auto;
 }
 body {
   display: flex;
