We made new pages an linked into diegolab, also we change de nav in diegolab

--- a/diegolab/random-learning/dropdown-menu.css
+++ b/diegolab/random-learning/dropdown-menu.css
@@ -28,6 +28,9 @@ html {
     text-transform: uppercase;
     letter-spacing: 1px;
 }
+#menu ul a {
+    display: block;
+}
 #menu ul li {
     position: relative;
     float: left;
