--- a/diegolab/diegolab.css
+++ b/diegolab/diegolab.css
@@ -1,3 +1,14 @@
+html {
+    background-color: rgb(76, 0, 130, 0.205);
+    font-family: sans-serif;
+}
+.main-page-container {
+    background-color: lavender;
+    max-width: 800px;
+    width: 95%;
+    padding: 2%;
+    margin: 0 auto;
+}
 .learn-main-container {
     display: flex;
     flex-direction: column;
@@ -11,4 +22,64 @@
     display: flex;
     flex-direction: row;
     background-color: lightsalmon;
+}
+
+
+/*Aqui trabajaremos la navegacion por los temas*/
+.menu-container ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.menu-container ul li {
+    background-color: #2e528b;
+}
+.menu-container ul a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 16px;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+.menu-container ul li {
+    position: relative;
+    float: left;
+    margin: 0;
+    padding: 0;
+}
+.menu-container ul li:hover {
+    background:#5b78a7;
+}
+/* Menu desplegable*/
+.menu-container ul ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: #eee;
+    padding: 0;
+    max-width: 800px;
+    min-width: 300px;
+    width: 100%;
+}
+/* Items o Articulos del menu desplegable*/
+.menu-container ul ul li {
+    float: none;
+    max-width: 800px;
+    min-width: 400px;
+    width: 100%;
+}
+/*Enlaces de los articulos o items del menu 
+desplegable  */
+.menu-container ul ul a {
+    line-height: 120%;
+    padding: 10px 15px;
+}
+/*Items del menu desplegable*/
+.menu-container ul li:hover > ul {
+    display: block;
 }
