--- a/estilos.css
+++ b/estilos.css
@@ -1,273 +1,229 @@
-.html-properties {
-      background-color: hsla(205, 24%, 80%, 0.219);
-      background-color: rgb(76, 0, 130, 0.205);
-}
-.main-page-container {
-  background-color: lavender;
-  background-color: rgb(238, 235, 235);
-  max-width: 800px;
-  width: 95%;
-  padding: 2%;
-  margin: 0 auto;
-}
-body {
-  display: flex;
-  flex-direction: column;
-  color: rgb(48, 42, 22);
+html {
+    font-family:
+     'Gill Sans', 'Gill Sans MT', Calibri, 
+     'Trebuchet MS', sans-serif;
+     background-color: gray;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  margin: 1.45rem 8% 0 8%;
-}
 
-.main-nav-bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  background-color: rgba(48, 49, 51, 0.664);
-  color: rgb(212, 218, 240);
-  position: fixed;
-  bottom: 90%;
-  top: 5px;
-  inline-size: 99%;
-  padding-top: 10px;
-  padding-left: 10px;
-  font-size: 100%;
+/*Start nav bar*/
+.nav-container {
+    background-color: rgba(0, 0, 0, 0.95);
+    position: fixed;
+    top: 9px;
+    width: 100%;
+    margin: -8px -8px auto -8px;
+    display: flex;
+    justify-content: flex-end;
+    height: 55px;
+    z-index: 1;
 }
-
-ul.main-list-nav li {
-  display: inline;
-  height: 3px;
-  
+.nav-container ul {
+    display: flex;
+    flex-direction: row;
+    margin: 0 5px;
 }
-
-.contact-bar {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      background-color: rgba(48, 49, 51, 0.664);
-      color: rgb(212, 218, 240);
-      position: fixed;
-      top: 92%;
-      bottom: 5px;
-      inline-size: 99%;
-      padding-top: 2px;
-      padding-left: 2px;
-      font-size: 100%;
+.nav-container ul li {
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(0, 0, 0, 0.322);
+    height: 20px;
+    width: 17vw;
+    padding-top: 1px;
+    padding-bottom: 1px;
 }
-
-ul.datos-contacto li {
-  display: inline;
- 
+.nav-container ul > li, a {
+    margin: 0 1px;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    list-style: none;
+    text-decoration: none;
+    justify-content: center;
+    text-align: center;
+    color: white;
 }
-
-@media (min-height: 2240px ) {
-  .gray-bar {
-    font-size: 235%;
-  }
-  .main-nav-bar {
-    font-size: 235%;
-    bottom: 96%;
-    top: -1%;
-  }
-}
-
-.title-color {
-      color: rgb(30, 53, 44);
-      background-color: rgba(29, 54, 77, 0.233);
-      font-size: 35px;  
-      font-family: monospace;
-      text-align: center;
-      padding: 25px;
-      margin: 25px;
-}
-.title-border {
-      border-color: rgba(110, 108, 67, 0.788);
-      border-style: solid;
-      border-width: 10px;
-}
-
-.sub-title {
-      color: slateblue;
-      font-size: 23px;
-      font-family: monospace;
-}
-
-.paragraph {
-      color: rgb(16, 21, 39);
-      font-size: 20px;
-}
-
-.medium-image {
-      width: 300px;
-      border-color: slategray;
-      border-style: solid;
-      border-width: 5px;
-      border-radius: 1%;
-   
-}
-
-.background-color {
-      background-color: slategrey;
-}
-#lista-numerada:hover {
-      background-color: beige;
-      transform: scale(1.1);
-
-}
-
-.orange {
-      background-color: #755f4977;
-      padding: 5px;
-      margin-top: 100px;
-    }
-  
-.cyan {
-      background-color: #4a797967;
-      padding: 5px;
-    }
-  
-.raspberry {
-      background-color: #7a57696b;
-      padding: 5px;
-    }
-      #cuadro-colores {
-    width: 70%;
-    height: 100px;
-    margin:  50px auto;
-    background: linear-gradient(
-      53deg,
-      #ccfffc,
-      #ffcccf
-    );
-   
-  }
-  #cuadro-colores:hover {
-      transform: scale(1.1);
-  }
-#foto-diego:hover {
-  transform: scale(1.1)
-}
-.heart {
-      position: fixed;
-      margin: auto;
-      top: 150px;
-      right: 0;
-      bottom: 0;
-      bottom: 78%;
-      left: 1100px;
-      left:85%;
-      background-color: pink;
-      height: 50px;
-      width: 50px;
-      transform: rotate(-45deg);
-    }
-    .heart::after {
-      background-color: pink;
-      content: "";
-      border-radius: 50%;
-      position: absolute;
-      width: 50px;
-      height: 50px;
-      top: 0px;
-      left: 25px;
-    }
-    .heart::before {
-      content: "";
-      background-color: pink;
-      border-radius: 50%;
-      position: absolute;
-      width: 50px;
-      height: 50px;
-      top: -25px;
-      left: 0px;
-    }
-    .heart:hover {
-          transform: scale(1.2);
-    }
+.nav-container ul li a:hover {
+    background-color: rgba(245, 245, 245, 0.062);
+    font-size: 110%;
+    border-width: 2px;
+    color: rgb(100, 167, 255);
+    font-weight: 120%;
     
-    #rect {
-      height: 40px;
-      width: 70%;
-      background: black;
-      margin: 50px auto;
-      border-radius: 5px;
-    }
-  
-    #rect:hover {
-  animation-name: rainbow;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-    }
-  
-  @keyframes rainbow {
-  0%{background-color: blue;
-      top: 0px;}
-  50% {background-color: green;
-      top: 50px;
 }
-  100% {background-color: yellow;
-      top: 0px;
+/*End nav bar*/
+/*Start Welcome Section*/
+header .welcome-section {
+    background-color: black;
+    position: absolute;
+    top: 55px;
+    min-height: 300px;
+    width: 100vw;
+    margin-left: -8px;
 }
-  }
+header img {
+    width: 100vw;
+    position: absolute;
+}
+header .welcome-section .aboutme {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    line-height: 5px;
+    position: relative;
+    top: 3vw;
+    margin-left: 3%;
+    font-size: 2vw;
+}
+/*End Welcome and about section*/
+/*Start Projects*/
+.projects {
+    background-color: rgba(192, 192, 192, 0.575)5);
+    position: relative;
+    top: 800px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: auto auto auto 50px 1fr;
+    grid-gap: 20px;
+    grid-template-areas: 
+    ". title ."
+    "p1 p2 p3"
+    "p4 p5 p6"
+    ". btn ."
+    "ftr ftr ftr";
+}
+.projects-title {
+    margin: 0 auto;
+    width: 100%;
+    display: inline;
+    grid-area: title;
+}
+.project1 {
+    width: 100%;
+    min-height: 200px;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.425);
+    margin: 0 auto auto 10px;
+    grid-area: p1;
+    text-align: center;
+}
+.project1 img {
+    width: 100%;
+}
+.project2 {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.377);
+    margin: 0 auto auto 10px;
+    grid-area: p2;
+    text-align: center;
+}
+.project2 img {
+    width: 100%;
+}
+.project3 {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.466);
+    margin: 0 auto auto 10px;
+    grid-area: p3;
+    text-align: center;
+}
+.project3 img {
+    width: 100%;
+}
+.project4 {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.493);
+    margin: 0 auto auto 10px;
+    grid-area: p4;
+    text-align: center;
+}
+.project4 img {
+    width: 100%;
+}
+.project5 {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.397);
+    margin: 0 auto auto 10px;
+    grid-area: p5;
+    text-align: center;
+}
+.project6 {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.466);
+    margin: 0 auto auto 10px;
+    grid-area: p6;
+    text-align: center;
+}
+/*Show all button*/
+.btn { 
+    grid-area: btn;
+    display: flex;
+    
+    justify-content: center;
+}
+.btn button {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.192);
+    height: 50px;
+    width: 100px;
+    border-width: 1px;
+    border-radius: 2px;
+    border-color: white;
+    font-size: 20px;
+}
+/*Footer area*/
+.ftr-container {
+    background-color: black;
+    color: white;
+    grid-area: ftr;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.ftr-container h2 {
+    font-size: 4em;
+    margin-bottom: 2px;
+}
+.ftr-container p {
+    margin-top: 2px;
+}
+.ftr-container .social-media {
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: row;
+    font-size: 2.2vw;
+    margin: 15px auto;
+    height: 2em;
+}
+.ftr-container .social-media div {
+    margin: 0 auto;
+    padding: 2px 1vw 2px 1vw;
+    background-color: rgb(12, 12, 12);
+}
+.ftr-container .social-media a:hover {
+    background-color: rgba(245, 245, 245, 0.062);
+    font-size: 110%;
+    border-width: 2px;
+    color: rgb(100, 167, 255);
+    font-weight: 120%;
+    padding: 0;
+    margin: auto;
+}
 
-  #ball {
-      width: 70px;
-      height: 70px;
-      margin: 50px auto;
-      position: relative;
-      left: 20%;
-      border-radius: 50%;
-      background: linear-gradient(
-        35deg,
-        #ccffff,
-        #ffcccc
-      );
-    }
-    #ball:hover {
-      animation-name: fade;
-      animation-duration: 3s;
-      animation-fill-mode: forwards;
-      animation-iteration-count: infinite;
-    }
-  
-    @keyframes fade {
-      50% {
-        left: 60%;
-        opacity: 0.1;
-  
-      }
-    }
-    #ball2 {
-      width: 100px;
-      height: 100px;
-      margin: auto 50px;
-      position: static;
-      border-radius: 50%;
-      background: linear-gradient(
-        35deg,
-        #ccffff,
-        #ffcccc
-      );
-      animation-name: bounce;
-      animation-duration: 1s;
-      animation-iteration-count: infinite;
-      top: 150%;
-    }
-  
-    @keyframes bounce{
-      0% {
-        top: 0px;
-      }
-      50% {
-        top: 249px;
-        width: 130px;
-        height: 70px;
-      }
-      100% {
-        top: 0px;
-      }
-    }
-  
+hr {
+    border-color: rgba(255, 255, 255, 0.603);
+    background-color: rgba(245, 245, 245, 0.39);
+    height: 4px;
+    width: 100%;
+    border-width: 1px;
+}
+#cellphone {
+    font-size: 0.7em;
+}
+
+
+
