--- a/portfolio/curriculumn/cvdiego-vidal-lopez.css
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.css
@@ -1,21 +1,51 @@
 html {
     background-color: rgb(76, 0, 130, 0.205);
 }
-.main-nav-bar {
+/*Start nav bar*/
+.nav-container {
+    background-color: rgba(0, 0, 0, 0.95);
+    position: fixed;
+    top: 9px;
+    width: 100%;
+    margin: -8px -8px auto -8px;
+    display: flex;
+    justify-content: flex-end;
+    height: 55px;
+    z-index: 1;
+}
+.nav-container ul {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    background-color: rgba(48, 49, 51, 0.664);
-    color: rgb(212, 218, 240);
-    position: fixed;
-    bottom: 90%;
-    top: 5px;
-    inline-size: 99%;
-    padding-top: 10px;
-    padding-left: 10px;
-    font-size: 100%;
-    height: 50px;
-  }
+    margin: 0 5px;
+}
+.nav-container ul li {
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(0, 0, 0, 0.322);
+    height: 20px;
+    width: 17vw;
+    padding-top: 1px;
+    padding-bottom: 1px;
+}
+.nav-container ul > li, a {
+    margin: 0 1px;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    list-style: none;
+    text-decoration: none;
+    justify-content: center;
+    text-align: center;
+    color: white;
+}
+.nav-container ul li a:hover {
+    background-color: rgba(245, 245, 245, 0.062);
+    font-size: 110%;
+    border-width: 2px;
+    color: rgb(100, 167, 255);
+    font-weight: 120%;
+    
+}
+/*End nav bar*/
   ul.main-list-nav li {
     display: inline;
     height: 3px;
