We add all infromation from the old cv to the new cv but need to be ordened or sort to a correct display

--- a/portfolio/curriculumn/cvdiego-vidal-lopez.css
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.css
@@ -116,9 +116,10 @@ header .welcome-section .aboutme #objetivo {
     top: 52vw;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: auto auto auto 50px 1fr;
+    grid-auto-rows: auto auto auto auto 50px 1fr;
     grid-gap: 20px;
     grid-template-areas: 
+    ". . ."
     ". title ."
     "p1 p2 p3"
     "p4 p5 p6"
