--- a/portfolio/curriculumn/cvdiego-vidal-lopez.css
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.css
@@ -116,14 +116,15 @@ header .welcome-section .aboutme #objetivo {
     top: 52vw;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: auto auto auto auto 50px 1fr;
+    grid-auto-rows: auto auto auto auto auto 50px 1fr;
     grid-gap: 20px;
     grid-template-areas: 
-    ". . ."
+    ". pfttl ."
+    "pic2 profsec pdtsec"
     ". title ."
     "p1 p2 p3"
     "p4 p5 p6"
-    ". btn ."
+    ". trjsec btn"
     "ftr ftr ftr";
 }
 @media ( max-width:600px ) {
@@ -148,6 +149,31 @@ header .welcome-section .aboutme #objetivo {
     .projects-title h2 {
         text-align: center;
     }
+}
+.profile-subitle {
+    grid-area: pfttl;
+    text-align: center;
+}
+.picture2 {
+    grid-area: pic2;
+}
+.picture2 img {
+    position: relative;
+    width: 85%;
+    margin-left: 5%;
+    margin-top: 5%;
+    border-style: solid;
+    border-width: 10px;
+    border-color: whitesmoke;
+}
+.personal-data {
+    grid-area: pdtsec;
+}
+.profile {
+    grid-area: profsec;
+}
+.trajectory {
+    grid-area: trjsec;
 }
 .project1 {
     width: 100%;
